--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "bcrypt-promise": "^2.0.0",
     "fs-extra": "^7.0.1",
     "handlebars": "^4.4.2",
