--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "koa-static": "^5.0.0",
     "koa-views": "^6.1.5",
     "mime-types": "^2.1.22",
-    "sqlite-async": "^1.0.12"
+    "sqlite-async": "^1.0.12",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "eslint": "^5.15.2",
