--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "koa-views": "^6.1.5",
     "mime-types": "^2.1.22",
     "mock-fs": "^4.10.3",
+    "nodemailer": "^6.3.1",
     "sqlite-async": "^1.0.12",
     "uuid": "^3.3.3"
   },
