--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mime-types": "^2.1.22",
     "mock-fs": "^4.10.3",
     "nodemailer": "^6.3.1",
+    "pdfmake": "^0.1.62",
     "sqlite-async": "^1.0.12",
     "uuid": "^3.3.3"
   },
