--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "mock-fs": "^4.10.3",
     "nodemailer": "^6.3.1",
     "pdfmake": "^0.1.62",
-    "sqlite-async": "^1.0.12",
-    "uuid": "^3.3.3"
+    "sqlite-async": "^1.0.12"
   },
   "devDependencies": {
     "eslint": "^5.15.2",
