--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,28 @@
 .DS_Store
 node_modules/
 coverage/
-*.db
 screenshots/*
 docs/
+
+data/
+sessions/
+screenshots/
+__image_snapshots_/
+__diff_output__/
+trace/
+.node-persist/
+
+*.db
+*snap.png
+*diff.png
+*trace.json
+*.0x
+
+*.pptx
+*.mp4
+
+*.codio
+*.c9
 
 #removing editor configs and generated files
 package-lock.json
