--- a/package.json
+++ b/package.json
@@ -7,19 +7,21 @@
     "node": "12.x"
   },
   "scripts": {
+    "coverage": "./node_modules/.bin/jest --coverage 'unit tests/' && ./node_modules/.bin/istanbul check-coverage --statement 100 --branch 100 --function 100 --line 100",
+    "dependency": "./node_modules/.bin/dependency-check -i bcrypt --unused --no-dev . && node_modules/.bin/dependency-check -i modules --missing .",
     "start": "node index.js",
-    "acceptance": "jest --coverage --detectOpenHandles",
     "jsdoc": "node_modules/.bin/jsdoc -c jsdoc.conf",
     "linter": "node_modules/.bin/eslint .",
-    "test": "jest --coverage --detectOpenHandles",
-    "unit": "node_modules/.bin/jest --coverage --runInBand tests/unit/"
+    "test": "./node_modules/.bin/jest --coverage unit tests",
+    "acceptance": "test.sh"
   },
   "jest": {
     "projects": [
       "<rootDir>/jest-test.config.js"
-    ]
+    ],
+    "preset": "jest-puppeteer"
   },
-  "author": "",
+  "author": "Deyan Bozhilov",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
@@ -37,14 +39,27 @@
     "mock-fs": "^4.10.3",
     "nodemailer": "^6.3.1",
     "pdfmake": "^0.1.62",
+    "shelljs": "^0.8.3",
     "sqlite-async": "^1.0.12"
   },
   "devDependencies": {
+    "coverage": "^0.4.1",
+    "dependency": "0.0.1",
+    "dependency-check": "^4.1.0",
     "eslint": "^5.15.2",
     "handlebars-validate": "^0.1.2",
     "http-status-codes": "^1.3.2",
-    "jest": "^24.1.0",
+    "istanbul": "^0.4.5",
+    "jest": "^24.9.0",
+    "jest-image-snapshot": "^2.11.0",
+    "jest-puppeteer": "^4.3.0",
+    "jscpd": "^2.0.16",
     "jsdoc": "^3.6.3",
-    "jsdoc-route-plugin": "^0.1.0"
+    "jsdoc-route-plugin": "^0.1.0",
+    "markdownlint": "^0.17.0",
+    "puppeteer": "^1.20.0",
+    "puppeteer-har": "^1.1.1",
+    "start-server-and-test": "^1.10.6",
+    "supertest": "^4.0.2"
   }
 }
